Tue Sep 17 00:09:44 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* checkout.c (safe_location): Do not reject a location merely
	because it textually starts with hardpath; insist that it be
	hardpath or a subdirectory thereof.

Mon Sep 16 11:46:36 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_cleanup): Add comment about ignoring errors
	from unlink_file_dir.

Mon Sep 16 10:31:48 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c: Add support for -T <tmpdir> command line option.  This
 	is needed for servers started via inetd.
	(usg): Added line for -T.  Improved -z documentation.
	(main): Read default for tmpdir from the environment. Test for 'T'
	in getopt loop.  Use '/tmp' as ultimative fallback.  Update
	environment if possible.

	* cvs.h (TMPDIR_ENV): Added for -T <tmpdir> command line option.

	* options.h.in: Add TMPDIR_DFLT

	* import.c (update_rcs_file): Use global variable Tmpdir instead
 	of reading the environment.

	* server.c (server_cleanup): Use global variable Tmpdir instead of
 	reading the environment.  Also, replace system("rm -rf") with
 	unlink_file_dir.
	(server): Use global variable Tmpdir instead of reading the
 	environment.

Thu Sep 12 1996  Jim Kingdon  <kingdon@cyclic.com>

	* main.c (main): If ARGV0_NOT_PROGRAM_NAME, then just set
	program_name to "cvs" rather than argv[0].

Thu Sep 12 12:06:56 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries): If we can't write the file, don't
	make it a fatal error.

Wed Sep 11 12:46:23 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_server): Move START_SERVER_RETURNS_SOCKET code
	so that it is only run for server_method.  It is wrong for
	pserver_method (in which connect_to_pserver sets server_sock).

	* login.c (construct_cvspass_filename): If NO_SLASH_AFTER_HOME,
	don't put a '/' between $HOME and .cvspass.  Reindent function.
	* build_src.com: Add zlib.c, login.c, and scramble.c.
