@@ -1,5 +1,9 @@
 Tue Sep 17 00:09:44 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* lock.c: In comment, mention one more function of readlocks
+	(fileattr not updated atomically).  Note similarity between
+	solutions #2 and #5.
+
 	* checkout.c (safe_location): Do not reject a location merely
 	because it textually starts with hardpath; insist that it be
 	hardpath or a subdirectory thereof.
